--- a/day1/05-双向绑定.html
+++ b/day1/05-双向绑定.html
@@ -5,25 +5,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-
+  <script src="../js/Vue.js"></script>
 </head>
 
 <body>
   <div id="app">
-    <a v-bind:href="url">点击跳转百度</a>
-    <a :href="url">点击跳转百度</a>
-    <button @click='btn'>按钮</button>
+    <h2>{{msg}}</h2>
+    <!-- 表单的value值 -->
+    <input type="text" v-bind:value="msg" v-on:input="ipt">
   </div>
-  <script src="../js/Vue.js"></script>
+
   <script>
     var vm = new Vue({
       el: '#app',
       data: {
-        url: 'http://www.baidu.com'
+        msg: '',
       },
       methods: {
-        btn() {
-          this.url = 'http://www.bilibili.com'
+        ipt(e) {
+          this.msg = e.target.value
         }
       }
     });
