--- a/day1/12-表单的修饰符.html
+++ b/day1/12-表单的修饰符.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script src="./js/Vue.js"></script>
 </head>
 
 <body>
+  <div id="app">
+    
+  </div>
+
   <script>
-    let arr = [10, 9, 8, 7, 6, 5, 4, 3, 2, 1];
-    let newArr = [];
-    for (let i = arr.length - 1; i >= 0; i--) {
-      newArr[newArr.length] = arr[i]
-    }
-    console.log(newArr);
+    var vm = new Vue({
+      el: '#app',
+      data: {},
+      methods: {}
+    });
   </script>
 </body>
 
