--- a/day1/13-自定义指令.html
+++ b/day1/13-自定义指令.html
@@ -11,6 +11,7 @@
 <body>
   <div id="app">
     <input type="text" v-color="msg">
+    <input type="text" v-focus>
   </div>
   <script>
     // Vue.directive('focus', {
@@ -19,30 +20,43 @@
     //     el.focus();
     //   }
     // })
-    Vue.directive('color', {
-      // el 表示指令所绑定的元素
-      bind: function (el, binding) {
-        // 改变背景颜色
-        el.style.backgroundColor = binding.value;
-        // 以对象的方式传递参数改变背景颜色
-        // el.style.backgroundColor = binding.value.color;
-        console.log(binding);
-        console.log(binding.value.color);  // undefined
-        console.log(binding.name); //打印出来的name是指令名：不包括 V-前缀
-        console.log(binding.value);//打印出来的value是指令的绑定值：color绑定了 "red"这个值
-      }
-    })
+    // Vue.directive('color', {
+    //   // el 表示指令所绑定的元素
+    //   bind: function (el, binding) {
+    //     // 改变背景颜色
+    //     el.style.backgroundColor = binding.value;
+    //     // 以对象的方式传递参数改变背景颜色
+    //     // el.style.backgroundColor = binding.value.color;
+    //     console.log(binding);
+    //     console.log(binding.value.color);  // undefined
+    //     console.log(binding.name); //打印出来的name是指令名：不包括 V-前缀
+    //     console.log(binding.value);//打印出来的value是指令的绑定值：color绑定了 "red"这个值
+    //   }
+    // })
     var vm = new Vue({
       el: '#app',
       data: {
         // 第一种传递方式
-        msg: "yellow",
+        // msg: "yellow",
         // 以对象的形式传递参数
         msg: {
           color: 'red'
         }
       },
-      methods: {}
+      methods: {},
+      directives: {
+        color: {
+          bind: function (el, binding) {
+            // 改变背景颜色
+            el.style.backgroundColor = binding.value.color;
+          }
+        },
+        focus: {
+          inserted(el) {
+            el.focus();
+          }
+        }
+      },
     });
 
   </script>
