--- a/day2/图书管理案例-静态页面.html
+++ b/day2/图书管理案例-静态页面.html
@@ -58,7 +58,7 @@
               名称：
             </label>
             <input type="text" id="name" v-model="name">
-            <button @click="handle">提交</button>
+            <button @click="handle" :disabled="sub">提交</button>
           </div>
         </div>
       </div>
@@ -92,9 +92,50 @@
   </div>
   <script type="text/javascript" src="../js/vue.js"></script>
   <script type="text/javascript">
+    // 时间过滤器
+    Vue.filter('format', function (value, arg) {
+      function dateFormat(date, format) {
+        if (typeof date === "string") {
+          var mts = date.match(/(\/Date\((\d+)\)\/)/);
+          if (mts && mts.length >= 3) {
+            date = parseInt(mts[2]);
+          }
+        }
+        date = new Date(date);
+        if (!date || date.toUTCString() == "Invalid Date") {
+          return "";
+        }
+        var map = {
+          "M": date.getMonth() + 1, //月份 
+          "d": date.getDate(), //日 
+          "h": date.getHours(), //小时 
+          "m": date.getMinutes(), //分 
+          "s": date.getSeconds(), //秒 
+          "q": Math.floor((date.getMonth() + 3) / 3), //季度 
+          "S": date.getMilliseconds() //毫秒 
+        };
+
+        format = format.replace(/([yMdhmsqS])+/g, function (all, t) {
+          var v = map[t];
+          if (v !== undefined) {
+            if (all.length > 1) {
+              v = '0' + v;
+              v = v.substr(v.length - 2);
+            }
+            return v;
+          } else if (t === 'y') {
+            return (date.getFullYear() + '').substr(4 - all.length);
+          }
+          return all;
+        });
+        return format;
+      }
+      return dateFormat(value, arg);
+    })
     var vm = new Vue({
       el: '#app',
       data: {
+        sub: false,
         flag: false,
         id: '',
         name: '',
@@ -154,7 +195,31 @@
           // this.books.filter((item) => {
           //   return item.id != id;
           // })
+        },
+      },
+      watch: {
+        name(val) {
+          this.sub = this.book.some((item) => {
+            return item.name == val;
+          })
+          this.sub = flag;
         }
+      },
+      mounted() {
+        var data = [{
+          id: '1',
+          name: '三国演义',
+          date: new Data(),
+        }, {
+          id: '2',
+          name: '西游记',
+          date: ''
+        }, {
+          id: '3',
+          name: '水浒传',
+          date: ''
+        }]
+        this.books = data;
       }
     })
   </script>
