--- a/day3/01-自定义组件.html
+++ b/day3/01-自定义组件.html
@@ -19,7 +19,7 @@
   </div>
 
   <script>
-    // 全局组件
+    // 全局组件 v\];x
     // Vue.component('button-counter', {
     //   data() {
     //     return {
