--- a/day3/08-组件插槽.html
+++ b/day3/08-组件插槽.html
@@ -10,30 +10,23 @@
 
 <body>
   <div id="app">
-    <menu-item :msg="pmsg"></menu-item>
-    <menu-item :info="info"></menu-item>
+    <alert-box>
+      <div>123</div>
+    </alert-box>
   </div>
 
   <script>
-    Vue.component('menu-item', {
-      props: ['title', 'info'],
-      data() {
-        return {
-          msg: '子组件本身的数据',
-          info: '123'
-        }
-      },
+    Vue.component('alert-box', {
       template: `
-        <div>{{msg}}</div>
-        <div>{{info}}</div>
+        <div>
+          <strong>ERROR</strong>
+          <slot>这是默认的内容</slot>
+        </div>
       `
     })
     var vm = new Vue({
       el: '#app',
-      data: {
-        pmsg: '父组件本身的数据',
-        abc: '123'
-      },
+      data: {},
       methods: {},
       //计算属性
       computed: {},
