--- a/day3/16-购物车案例.html
+++ b/day3/16-购物车案例.html
@@ -120,15 +120,35 @@
             <img :src="item.img"/>
             <div class="name">{{item.name}}</div>
             <div class="change">
-              <a href="">－</a>
-              <input type="text" class="num" />
-              <a href="">＋</a>
+              <a href="" @click.prevent="sub(item.id)">－</a>
+              <input type="text" class="num" :value="item.num" @blur="changeNum(item.id,$event)"/>
+              <a href="" @click.prevent="add(item.id)">＋</a>
             </div>
             <div class="del" @click="del(item.id)">×</div>
           </div>
         </div>
       `,
       methods: {
+        sub(id) {
+          this.$emit('cheange-num', {
+            id: id,
+            type: 'sub',
+          });
+        },
+        add(id) {
+          this.$emit('cheange-num', {
+            id: id,
+            type: 'add',
+          });
+        },
+        changeNum(id, event) {
+          console.log(id, event.target.value);
+          this.$emit('change-num', {
+            id: id,
+            type: 'change',
+            num: event.target.value
+          })
+        },
         del(id) {
           console.log(id);
           // 把id传递给父组件
@@ -198,7 +218,7 @@
       <div class='cart'>
         <cart-title :uname="uname"></cart-title>
         <!-- 监听子组件的事件-->
-        <cart-list :list="list" @cart-del="delCart"></cart-list>
+        <cart-list :list="list" @change-num="changeName($event)" @cart-del="delCart"></cart-list>
         <cart-total :list="list"></cart-total>
       </div>
       `,
@@ -208,6 +228,31 @@
         'cart-total': CarTotal
       },
       methods: {
+        changeName(val) {
+          console.log(val);
+          if (type == 'change') {
+            this.list.some(item => {
+              if (item.id == val.id) {
+                item.num = val.num;
+                return true
+              }
+            })
+          } else if (val.type == "sub") {
+            this.list.some(item => {
+              if (item.id == val.id) {
+                item.num -= 1;
+                return true
+              }
+            })
+          } else if (val.type == "add") {
+            this.list.some(item => {
+              if (item.id == val.id) {
+                item.num += 1;
+                return true
+              }
+            })
+          }
+        },
         delCart(id) {
           // 根据id找到索引
           var index = this.list.findIndex(item => {
