--- a/day4/propmise.html
+++ b/day4/propmise.html
@@ -23,6 +23,9 @@
           reject('出错了')
         )
       }, 1000)
+    });
+    p.then(() => {
+      
     })
     var vm = new Vue({
       el: '#app',
