--- a/复习/05.对象字面量增强写法.html
+++ b/复习/05.对象字面量增强写法.html
@@ -8,7 +8,16 @@
 <body>
   <script>
     // const obj = new Object()
-    const obj = {}
+    const name = 'zs'
+    const age = 1.88
+    const height = 17
+
+    const obj = {
+      age,
+      height,
+      name
+    }
+    console.log(obj);
   </script>
 </body>
 </html>
