--- a/复习/09.v-else-if的使用.html
+++ b/复习/09.v-else-if的使用.html
@@ -11,12 +11,14 @@
 <body>
   <div id="app">
     <div class="box">
-      <h1 v-if="score >= 90">优秀</h1>
+       <!-- <h1 v-if="score >= 90">优秀</h1>
       <h1 v-else-if="score >= 80">良好</h1>
       <h1 v-else-if="score >= 70">及格</h1>
-      <h1 v-else>不及格</h1>
-    </div>
+      <h1 v-else>不及格</h1> -->
+      <h1>{{rester}}</h1>
+    </div>                                                                              
   </div>
+
 
   <script>
     var vm = new Vue({
@@ -26,7 +28,23 @@
       },
       methods: {},
       //计算属性
-      computed: {},
+      computed: {
+        rester(){
+          let isShowScore = ''
+          if(this.score >= 90){
+            isShowScore = '优秀'
+          }else if(this.score >= 80){
+            isShowScore = '良好'
+          }else if(this.score >= 70){
+            isShowScore = '普通'
+          }else if(this.score >= 60){
+            isShowScore = '及格'
+          }else{
+            isShowScore = '不及格'
+          }
+          return isShowScore 
+        }
+      },
       //侦听器
       watch: {},
     });
