--- a/01-holle world.html
+++ b/01-holle world.html
@@ -21,6 +21,7 @@
             data: {   // 模型数据 -- 一个对象
                 msg: 'Hello Vue',
                 name: 'Yes! I do',
+                mag:'talk is cheap.show me then code'
             }
         })
     </script>
